# PC-1500-Emulator

./: .gitmodules  Cargo.toml  ENHANCED_LH5801_CPU.md  PC1500_ARCHITECTURE.md  PC1500_DEVELOPMENT_LOG.md  PC1500_INTERRUPTS_IMPLEMENTATION.md  PC1500_TEXT_DISPLAY_RESULTS.md  PC1500_TIMER_IMPLEMENTATION.md  README.md  ROM_VERIFICATION_COMPLETE.md  opcode_conflicts_report.txt  pc1500-test-Cargo.toml  pc1500_rom_execution_test.rs  pc1500_timer_test.rs  simple_memory_test.rs  test_manual_memory.rs  test_pc1500_app_compile.rs  test_rom_loading.rs  verify_rom.sh
ceres/: Cargo.toml
ceres-core/: Cargo.toml
ceres-core/src/: cpu.rs  display.rs  interrupts.rs  joypad.rs  keyboard.rs  lh5801.rs  lh5810.rs  lib.rs  memory.rs  pc1500_old.rs  pd1990ac.rs
ceres-core/src/display/: mod.rs
ceres-core/src/keyboard/: mod.rs
ceres-core/src/memory/: mod.rs
ceres-core/src/pc1500/: control_instructions.rs  cpu.rs  interrupts.rs  joypad.rs  mod.rs  timing.rs
ceres-core/src/pc1500/display/: mod.rs
ceres-core/src/pc1500/memory/: mod.rs
ceres-egui/: Cargo.toml
ceres-egui/src/: app.rs  main.rs  pc1500_app.rs  pc1500_app_FINAL_WORKING.rs  pc1500_keyboard.rs  pc1500_main.rs  screen.rs
ceres-std/src/: cli.rs  lib.rs  thread.rs
ceres-std/src/wgpu_renderer/: mod.rs
ceres/src/: app.rs  macos.rs  main.rs  pc1500_app.rs  pc1500_keyboard_mapper.rs  pc1500_memory_writer.rs  pc1500_window.rs
pc1500-roms/: dissasembled_rom.asm
pc1500-test/: Cargo.toml
pc1500-test/src/: behavior_observer.rs  instruction_tracer.rs  main.rs
tests/: README.md  pc1500_display_test.rs  pc1500_keyboard_mapper.rs
