[package]
name = "ceres-egui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.anyhow]
version = "*"

[dependencies.ceres-core]
path = "../ceres-core"

[dependencies.directories]
version = "*"

[dependencies.eframe]
version = "*"
default-features = false
features = ["accesskit", "default_fonts", "wayland", "wgpu"]

[dependencies.rfd]
version = "*"

[dependencies.wgpu]
version = "*"
features = ["vulkan"]

[dependencies.winit]
version = "*"

[lints]
workspace = true

