[package]
name = "pc1500-rom-test"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "pc1500-rom-test"
path = "src/main.rs"

[[bin]]
name = "pc1500-behavior-observer"
path = "src/behavior_observer.rs"

[[bin]]
name = "pc1500-instruction-tracer"
path = "src/instruction_tracer.rs"

[dependencies]
anyhow = "1"

[dependencies.ceres-core]
path = "../ceres-core"
